2005-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/*: Update.

	* cygwin/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Remove profile
	stuff.

	* scm/output-ps.scm (grob-cause): Bugfix.

	* scm/lily.scm (ly:load): Remove x11-color.

	* stepmake/aclocal.m4 (STEPMAKE_GET_EXECUTABLE): Bugfix: do not
	quote executable, fixes getting version from program --with
	--options.
	(STEPMAKE_KPATHSEA): Bugfix for Cygwin cross building: use
	$ac_exeect.

	* Documentation/user/GNUmakefile: Only build music-glossary with
	rendered lilypond snippets during web.

2005-04-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/de.po: update.

	* lily/GNUmakefile (OUT_DIST_FILES): don't dist lexer.cc

2005-04-22  Laura Conrad <lconrad@laymusic.org>
 
	* scripts/abc2ly:
	second title line append with punctuation dash character;
	encode abc2ly python strings in utf-8
       
2005-04-21  Laura Conrad <lconrad@laymusic.org>

	* scripts/abc2ly fix chords (again)
 
2005-04-22  Bernard Hurley  <bernard@fong-hurley.org.uk>

	* scm/x11-color.scm: new file
	All x11 color names can be accessed with:
	#(x11-color 'ColorName),
	#(x11-color "ColorName") or:
	#(x11-color "color name")
	If the x11 color name is not recognised then it defaults
	to black

	* scm/lily.scm: amended to call scm/x11-color.scm

2005-04-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/invoking.itely (Reporting bugs): comment out
	reference to online PNG bug repository.

2005-04-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/translator-scheme.cc (ly:translator-property): Remove.
	Update callers.

	* lily/context-scheme.cc (ly:context-now): Move from translator.
	Update callers.

2005-04-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/grid-lines.ly (skips): refine example.

	* scm/define-context-properties.scm
	(all-user-translation-properties): doc autoBeamCheck

	* input/regression/grid-lines.ly (Module): new file.

	* lily/grid-point-engraver.cc (Module): new file.
