@@ -226,7 +226,8 @@ The syntax is the same as `define*-public'."
 	    
 	    "paper.scm"
 	    "backend-library.scm"
-	    ;; "x11-color.scm"
+	    "x11-color.scm"
+
 	    ;; must be after everything has been defined
 	    "safe-lily.scm"))
 
